added google map

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Phil Jauvin</title>
 
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+    <link href="stylesheets/main.css" rel="stylesheet">
+
+    <!-- Font -->
+    <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet' type='text/css'>
+
   </head>
 
   <body ng-controller="FormController">
@@ -47,7 +57,7 @@
           </div>
 
           <div style="text-align:centre" class="col-sm-3">
-            <img src="images/map.png" class="img-responsive img-rounded" alt="1738" style="max-width:300px;border:1px solid black;">
+            <div id="googleMap" style="width:300px;height:300px;"></div>
           </div>
         </div>
 
@@ -165,22 +175,13 @@
 
     </div>
 
-    <!-- Font awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-    <link href="stylesheets/main.css" rel="stylesheet">
-
-    <!-- Font -->
-    <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet' type='text/css'>
-
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
 
     <!-- Google maps -->
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script src="./js/map.js"></script>
 
     <!-- Smooth scrolling -->
     <script src="./js/anchorscroll.js"></script>
