responsive modal images

--- a/directives/flatstr-modal.html
+++ b/directives/flatstr-modal.html
@@ -11,7 +11,7 @@
     <div class="modal-body" style="text-align:center">
 
 
-      <img src="images/flatstr.jpg" class="img img-thumbnail" style="display:inline-block;width:618px;height:318px;background:lightgrey"></img>
+      <img src="images/flatstr.jpg" class="img img-thumbnail" style="display:inline-block;width:618px;background:lightgrey"></img>
 
       <div>
         <h3>
