--- a/directives/kayak-modal.html
+++ b/directives/kayak-modal.html
@@ -11,7 +11,7 @@
     <div class="modal-body" style="text-align:center">
 
 
-      <img src="images/kayak.jpg" class="img img-thumbnail" style="display:inline-block;width:618px;background:lightgrey"></img>
+      <img src="images/kayak.jpg" class="img img-thumbnail modal-thumbnail"></img>
 
       <div>
         <h3>
@@ -20,8 +20,8 @@
       </div>
 
       <div>
-        <a href="https://github.com/phil-jauvin/ka-yak"><i class="fa fa-github social"></i></a>
-        <a href="http://159.203.29.155:4000/"><i class="fa fa-link social"></i></a>
+        <a href="https://github.com/phil-jauvin/ka-yak"><i class="fa fa-github social-inverse"></i></a>
+        <a href="http://159.203.29.155:4000/"><i class="fa fa-link social-inverse"></i></a>
       </div>
 
     </div>
