--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   </head>
 
-  <body ng-controller="FormController">
+  <body>
 
     <div class="bg-parl">
     <div class="jumbotron">
@@ -70,7 +70,7 @@
                 <h1>Tools I use</h1>
               </div>
 
-              <div style="vertical-align:middle;margin-bottom:50px;" class="col-sm-3 col-sm-offset-2">
+              <div class="col-sm-3 col-sm-offset-2 showcase">
                 <h2><i class="fa fa-code" style="margin:0px;"></i></h2>
                 <h2>Front end</h2>
                 <h3>Angular</h3>
@@ -78,7 +78,7 @@
                 <h3>Bootstrap</h3>
               </div>
 
-              <div style="vertical-align:middle;margin-bottom:50px;" class="col-sm-2">
+              <div class="col-sm-2 showcase">
                 <h2><i class="fa fa-terminal" style="margin:0px;"></i></h2>
                 <h2>Back end</h2>
                 <h3>Node</h3>
@@ -86,7 +86,7 @@
                 <h3>MongoDB</h3>
               </div>
 
-              <div style="vertical-align:middle;margin-bottom:50px;" class="col-sm-3">
+              <div class="col-sm-3 showcase">
                 <h2><i class="fa fa-cogs" style="margin:0px;"></i></h2>
                 <h2>Other</h2>
                 <h3>Python</h3>
@@ -102,7 +102,7 @@
           <h1>Here's some of the cool stuff I've built</h1>
         </div>
 
-        <div style="vertical-align:middle;margin-bottom:50px;" class="col-sm-3 col-sm-offset-2">
+        <div class="col-sm-3 col-sm-offset-2 showcase">
           <a href="#" data-toggle="modal" data-target="#flatstrmodal"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
           <h3>Flatstr</h3>
 
@@ -112,7 +112,7 @@
           </div>
         </div>
 
-        <div style="vertical-align:middle;margin-bottom:50px;" class="col-sm-3 col-sm-offset-2">
+        <div class="col-sm-3 col-sm-offset-2 showcase">
           <a href="#" data-toggle="modal" data-target="#kayakmodal"><img class="img-thumbnail thumb" src="images/kayak.jpg" alt="1738"></a>
           <h3>Ka-yak</h3>
 
