--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </div>
 
               <div class="col-sm-3 col-sm-offset-2 showcase">
-                <h2><i class="fa fa-code" style="margin:0px;"></i></h2>
+                <h2><i class="fa fa-code fa-brown" style="margin:0px;"></i></h2>
                 <h2>Front end</h2>
                 <h3>Angular</h3>
                 <h3>JQuery</h3>
@@ -79,7 +79,7 @@
               </div>
 
               <div class="col-sm-2 showcase">
-                <h2><i class="fa fa-terminal" style="margin:0px;"></i></h2>
+                <h2><i class="fa fa-terminal fa-brown" style="margin:0px;"></i></h2>
                 <h2>Back end</h2>
                 <h3>Node</h3>
                 <h3>Express</h3>
@@ -87,7 +87,7 @@
               </div>
 
               <div class="col-sm-3 showcase">
-                <h2><i class="fa fa-cogs" style="margin:0px;"></i></h2>
+                <h2><i class="fa fa-cogs fa-brown" style="margin:0px;"></i></h2>
                 <h2>Other</h2>
                 <h3>Python</h3>
                 <h3>Java</h3>
