--- a/index.html
+++ b/index.html
@@ -96,30 +96,33 @@
 
       </div>
 
-      <div class="container col-sm-12 resume"  id="projects">
+      <div class="container col-sm-12"  id="projects">
 
         <div class="col-sm-12">
-          <h1>Here's some of the cool stuff I've built</h1>
+          <h1>Select projects</h1>
         </div>
 
-        <div class="col-sm-3 col-sm-offset-2 showcase">
-          <a href="#" data-toggle="modal" data-target="#flatstrmodal"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
-          <h3>Flatstr</h3>
+        <div class="resume">
+          <div class="col-sm-3 col-sm-offset-2 showcase">
+            <a href="#" data-toggle="modal" data-target="#flatstrmodal"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
+            <h3>Flatstr</h3>
 
-          <!-- Modal that displays the new form directive -->
-          <div id="flatstrmodal" class="modal fade" role="dialog">
-            <flatstr-modal></flatstr-modal>
+            <!-- Modal that displays the new form directive -->
+            <div id="flatstrmodal" class="modal fade" role="dialog">
+              <flatstr-modal></flatstr-modal>
+            </div>
           </div>
-        </div>
 
-        <div class="col-sm-3 col-sm-offset-2 showcase">
-          <a href="#" data-toggle="modal" data-target="#kayakmodal"><img class="img-thumbnail thumb" src="images/kayak.jpg" alt="1738"></a>
-          <h3>Ka-yak</h3>
+          <div class="col-sm-3 col-sm-offset-2 showcase">
+            <a href="#" data-toggle="modal" data-target="#kayakmodal"><img class="img-thumbnail thumb" src="images/kayak.jpg" alt="1738"></a>
+            <h3>Ka-yak</h3>
 
-          <!-- Modal that displays the new form directive -->
-          <div id="kayakmodal" class="modal fade" role="dialog">
-            <kayak-modal></kayak-modal>
+            <!-- Modal that displays the new form directive -->
+            <div id="kayakmodal" class="modal fade" role="dialog">
+              <kayak-modal></kayak-modal>
+            </div>
           </div>
+
         </div>
 
       </div>
