--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h2><i class="fa fa-code fa-brown" style="margin:0px;"></i></h2>
                 <h2>Front end</h2>
                 <h3>Angular</h3>
-                <h3>JQuery</h3>
+                <h3>jQuery</h3>
                 <h3>Bootstrap</h3>
               </div>
 
@@ -151,14 +151,14 @@
 
       <div class="container-fluid col-sm-12 p-footer" id="social">
 
-        <div class="col-xs-12">
+        <div>
           <a href="https://angel.co/phil-jauvin"><i class="fa fa-angellist social" style="margin-bottom:0px;"></i></a>
           <a href="https://github.com/phil-jauvin"><i class="fa fa-github social" style="margin-bottom:0px;"></i></a>
           <a href="https://twitter.com/PhilJauvin"><i class="fa fa-twitter social" style="margin-bottom:0px;"></i></a>
         </div>
 
-        <div class="col-xs-12" style="color:floralwhite;margin-top:15px;margin-bottom:40px;">
-          <h4 class="col-xs-4 col-xs-offset-4">
+        <div class="col-xs-12" style="text-align:center;color:floralwhite;margin-top:15px;margin-bottom:40px;">
+          <h4 class="col-xs-12 col-sm-4 col-sm-offset-4">
             I'm a Developer/Math Nerd based in Ottawa,ON. <br>
             When I'm not busy coding you can find me at the nearest Tim Hortons.
           </h4>
