--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
 
             <div class="col-sm-12">
 
-              <div class="col-sm-offset-1 col-sm-10">
+              <div>
 
-                <div class="form-group">
-                  <input class="col-xs-12 contact-form input-lg" type="text" name="name" placeholder="Name" required>
+                <div class="form-group col-sm-offset-1 col-sm-10">
+                  <input class="form-control col-xs-12 contact-form input-lg" type="text" name="name" placeholder="Name" required>
                 </div>
 
-                <div class="form-group">
-                  <input class="col-xs-12 contact-form input-lg" type="email" name="_replyto" placeholder="you@domain.net" required>
+                <div class="form-group col-sm-offset-1 col-sm-10">
+                  <input class="form-control col-xs-12 contact-form input-lg" type="email" name="_replyto" placeholder="you@domain.net" required>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group col-sm-offset-1 col-sm-10">
                   <textarea class="form-control contact-form input-lg" rows="5" id="message" placeholder="Type a nice message..." required></textarea>
                 </div>
 
