--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                 </div>
 
                 <div class="form-group col-sm-offset-1 col-sm-10">
-                  <textarea class="form-control contact-form input-lg" rows="5" id="message" placeholder="Type a nice message..." required></textarea>
+                  <textarea class="form-control col-xs-12 contact-form input-lg" rows="5" id="message" placeholder="Type a nice message..." required></textarea>
                 </div>
 
               </div>
 
             </div>
 
-            <button type="submit" class="btn btn-default btn-lg">Submit</button>
+            <button type="submit" class="btn btn-default btn-lg" style="margin-top:10px;">Submit</button>
 
           </form>
 
