added stack information

--- a/directives/flatstr-modal.html
+++ b/directives/flatstr-modal.html
@@ -14,9 +14,8 @@
       <img src="images/flatstr.jpg" class="img img-thumbnail modal-thumbnail"></img>
 
       <div>
-        <h3>
-          An app to find a flat in the Ottawa area.
-        </h3>
+        <h3>An app to find a flat in the Ottawa area.</h3>
+        <h4>Built with MEAN + Bootstrap</h4>
       </div>
 
       <div>
