--- a/directives/kayak-modal.html
+++ b/directives/kayak-modal.html
@@ -13,13 +13,12 @@
 
       <img src="images/kayak.jpg" class="img img-thumbnail modal-thumbnail"></img>
 
-      <div>
-        <h3>
-          An anonymous message board for the Ottawa-Gatineau area.
-        </h3>
+      <div class="col-sm-12">
+        <h3>An anonymous message board for the Ottawa-Gatineau area.</h3>
+        <h4>Built with MEAN + Bootstrap</h4>
       </div>
 
-      <div>
+      <div class="col-xs-12">
         <a href="https://github.com/phil-jauvin/ka-yak"><i class="fa fa-github social-inverse"></i></a>
         <a href="http://159.203.29.155:4000/"><i class="fa fa-link social-inverse"></i></a>
       </div>
