changed project description

--- a/directives/flatstr-modal.html
+++ b/directives/flatstr-modal.html
@@ -15,7 +15,7 @@
 
       <div>
         <h3>An app to find a flat in the Ottawa area.</h3>
-        <h4>Built with MEAN + Bootstrap</h4>
+        <h4>Built with MEAN + jQuery + Bootstrap</h4>
       </div>
 
       <div>
