--- a/index.html
+++ b/index.html
@@ -55,21 +55,29 @@
         </div>
 
         <div class="resume">
-          <div class="col-sm-3 col-sm-offset-2 showcase">
+
+          <div class="col-sm-4 showcase">
             <a href="#" data-toggle="modal" data-target="#flatstrmodal"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
             <h3>Flatstr</h3>
 
-            <!-- Modal that displays the new form directive -->
             <div id="flatstrmodal" class="modal fade" role="dialog">
               <flatstr-modal></flatstr-modal>
             </div>
           </div>
 
-          <div class="col-sm-3 col-sm-offset-2 showcase">
+          <div class="col-sm-4 showcase">
+            <a href="#" data-toggle="modal" data-target="#beatsmodal"><img class="img-thumbnail thumb" src="images/beats.jpg" alt="1738"></a>
+            <h3>Reddit 100</h3>
+
+            <div id="beatsmodal" class="modal fade" role="dialog">
+              <beats-modal></beats-modal>
+            </div>
+          </div>
+
+          <div class="col-sm-4 showcase">
             <a href="#" data-toggle="modal" data-target="#kayakmodal"><img class="img-thumbnail thumb" src="images/kayak.jpg" alt="1738"></a>
             <h3>Ka-yak</h3>
 
-            <!-- Modal that displays the new form directive -->
             <div id="kayakmodal" class="modal fade" role="dialog">
               <kayak-modal></kayak-modal>
             </div>
