--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
               <div class="col-sm-2 showcase">
                 <h2><i class="fa fa-terminal fa-brown" style="margin:0px;"></i></h2>
                 <h2>Back end</h2>
-                <h3>Node</h3>
-                <h3>Express</h3>
+                <h3>Node/Express</h3>
+                <h3>PHP</h3>
                 <h3>MongoDB</h3>
               </div>
 
