fixed formspree messaging

--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
 
               <div>
 
+                <div>
+                  <input type="hidden" name="_next" value="index.html/#contact">
+                </div>
+
                 <div class="form-group col-sm-offset-1 col-sm-10">
                   <input class="form-control col-xs-12 contact-form input-lg" type="text" name="name" placeholder="Name" required>
                 </div>
@@ -141,7 +145,7 @@
                 </div>
 
                 <div class="form-group col-sm-offset-1 col-sm-10">
-                  <textarea class="form-control col-xs-12 contact-form input-lg" rows="5" id="message" placeholder="Type a nice message..." required></textarea>
+                  <textarea class="form-control col-xs-12 contact-form input-lg" rows="5" name="message" placeholder="Type a nice message..." required></textarea>
                 </div>
 
               </div>
