--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <div>
 
                 <div>
-                  <input type="hidden" name="_next" value="index.html/#contact">
+                  <input type="hidden" name="_next" value="#contact">
                 </div>
 
                 <div class="form-group col-sm-offset-1 col-sm-10">
