--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="resume">
 
           <div class="col-sm-4 showcase">
-            <a href="#" data-toggle="modal" data-target="#flatstrmodal"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
+            <a href="http://159.203.29.155:3000/"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
             <h3>Flatstr</h3>
 
             <div id="flatstrmodal" class="modal fade" role="dialog">
@@ -66,7 +66,7 @@
           </div>
 
           <div class="col-sm-4 showcase">
-            <a href="#" data-toggle="modal" data-target="#beatsmodal"><img class="img-thumbnail thumb" src="images/beats.jpg" alt="1738"></a>
+            <a href="http://159.203.29.155:5000/"><img class="img-thumbnail thumb" src="images/beats.jpg" alt="1738"></a>
             <h3>Reddit 100</h3>
 
             <div id="beatsmodal" class="modal fade" role="dialog">
@@ -75,7 +75,7 @@
           </div>
 
           <div class="col-sm-4 showcase">
-            <a href="#" data-toggle="modal" data-target="#kayakmodal"><img class="img-thumbnail thumb" src="images/kayak.jpg" alt="1738"></a>
+            <a href="http://159.203.29.155:4000/"><img class="img-thumbnail thumb" src="images/kayak.jpg" alt="1738"></a>
             <h3>Ka-yak</h3>
 
             <div id="kayakmodal" class="modal fade" role="dialog">
