Placeholder link for flatstr
VPS IP seems to be blocked from kijiji

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="resume">
 
           <div class="col-sm-4 showcase">
-            <a href="http://159.203.29.155:3000/"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
+            <a href="http://lol.com/"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
             <h3>Flatstr</h3>
 
             <div id="flatstrmodal" class="modal fade" role="dialog">
