--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="resume">
 
           <div class="col-sm-4 showcase">
-            <a href="http://lol.com/"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
+            <a href="https://github.com/phil-jauvin/flatstr"><img class="img-thumbnail thumb" src="images/flatstr.jpg" alt="1738"></a>
             <h3>Flatstr</h3>
 
             <div id="flatstrmodal" class="modal fade" role="dialog">
