--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row col-sm-4">
           <h2 id="projectbutton"><a href="#projects">Projects</a></h2>
           <h2 id="socialbutton"><a href="#contact">Contact</a></h2>
-          <h2 id="socialbutton"><a href="#social">Contact</a></h2>
+          <h2 id="socialbutton"><a href="#social">Github</a></h2>
         </div>
 
       </div>
