--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="row col-sm-4">
           <h2 id="projectbutton"><a href="#projects">Projects</a></h2>
-          <h2 id="socialbutton"><a href="#contact">Contact</a></h2>
+          <h2 id="socialbutton"><a href="https://github.com/phil-jauvin/">Contact</a></h2>
           <h2 id="socialbutton"><a href="#social">Github</a></h2>
         </div>
 
