--- a/index.html
+++ b/index.html
@@ -47,11 +47,50 @@
     </div>
 
     <div>
-
+      
       <div class="container col-sm-12"  id="projects">
 
         <div class="col-sm-12">
-          <h1>Select projects</h1>
+          <h1>Work projects I've contributed to</h1>
+        </div>
+
+        <div class="resume">
+
+          <div class="col-sm-4 showcase">
+            <a href="https://www.virusscore.com"><img class="img-thumbnail thumb" src="images/virusscore.png" alt="1738"></a>
+            <h3>VirusScore</h3>
+
+            <div id="flatstrmodal" class="modal fade" role="dialog">
+              <flatstr-modal></flatstr-modal>
+            </div>
+          </div>
+
+          <div class="col-sm-4 showcase">
+            <a href="http://www.smoothiefund.com"><img class="img-thumbnail thumb" src="images/smoothiefund.png" alt="1738"></a>
+            <h3>Smoothiefund</h3>
+
+            <div id="beatsmodal" class="modal fade" role="dialog">
+              <beats-modal></beats-modal>
+            </div>
+          </div>
+
+          <div class="col-sm-4 showcase">
+            <a href="http://www.snipzy.com"><img class="img-thumbnail thumb" src="images/snipzy.png" alt="1738"></a>
+            <h3>Snipzy</h3>
+
+            <div id="kayakmodal" class="modal fade" role="dialog">
+              <kayak-modal></kayak-modal>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="container col-sm-12">
+
+        <div class="col-sm-12">
+          <h1>Hobby projects</h1>
         </div>
 
         <div class="resume">
