--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="container col-sm-12">
 
         <div class="col-sm-12">
-          <h1>Hobby projects</h1>
+          <h1 style="text-align: center;">Hobby projects</h1>
         </div>
 
         <div class="resume">
