--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
 
           <div class="col-sm-4 showcase">
-            <a href="http://159.203.29.155:5000/"><img class="img-thumbnail thumb" src="images/beats.jpg" alt="1738"></a>
+            <a href="http://dev.philjauvin.xyz:5000/"><img class="img-thumbnail thumb" src="images/beats.jpg" alt="1738"></a>
             <h3>Reddit 100</h3>
 
             <div id="beatsmodal" class="modal fade" role="dialog">
@@ -114,7 +114,7 @@
           </div>
 
           <div class="col-sm-4 showcase">
-            <a href="http://159.203.29.155:4000/"><img class="img-thumbnail thumb" src="images/kayak.jpg" alt="1738"></a>
+            <a href="http://dev.philjauvin.xyz:4000/"><img class="img-thumbnail thumb" src="images/kayak.jpg" alt="1738"></a>
             <h3>Ka-yak</h3>
 
             <div id="kayakmodal" class="modal fade" role="dialog">
