--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
 
           <div class="col-sm-4 showcase">
-            <a href="http://www.smoothie.nerd.guru"><img class="img-thumbnail thumb" src="images/smoothiefund.png" alt="1738"></a>
+            <a href="http://smoothie.nerd.guru"><img class="img-thumbnail thumb" src="images/smoothiefund.png" alt="1738"></a>
             <h3>Smoothiefund</h3>
 
             <div id="beatsmodal" class="modal fade" role="dialog">
