--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
           <div class="col-sm-4 showcase">
             <a href="http://www.snipzy.com"><img class="img-thumbnail thumb" src="images/snipzy.png" alt="1738"></a>
-            <h3>Snipzy</h3>
+            <h3>NAme withheld</h3>
 
             <div id="kayakmodal" class="modal fade" role="dialog">
               <kayak-modal></kayak-modal>
