--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           </div>
 
           <div class="col-sm-4 showcase">
-            <a href="http://www.snipzy.com"><img class="img-thumbnail thumb" src="images/snipzy.png" alt="1738"></a>
-            <h3>NAme withheld</h3>
+            <a href=><img class="img-thumbnail thumb" src="images/snipzy.png" alt="1738"></a>
+            <h3>Name withheld</h3>
 
             <div id="kayakmodal" class="modal fade" role="dialog">
               <kayak-modal></kayak-modal>
