--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
           <div class="col-sm-6 showcase">
             <a href="https://www.virusscore.com"><img class="img-thumbnail thumb" src="images/virusscore.png" alt="1738"></a>
             <h3>VirusScore</h3>
+            <h5>API + PHP Wrapper</h5>
           </div>
 
           <div class="col-sm-6 showcase">
             <a href="http://smoothiefund.com"><img class="img-thumbnail thumb" src="images/smoothiefund.png" alt="1738"></a>
             <h3>Smoothiefund</h3>
+            <h5>Design elements + Admin panel</h5>
           </div>
         
 
