--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
           <div class="col-sm-6 showcase">
             <a href="http://www.torontolaptoppros.ga"><img class="img-thumbnail thumb" src="images/torontolpro.png" alt="1738"></a>
             <h3>Toronto Laptop Pros</h3>
-            <h5>Complete solution</h5>
+            <h5>Complete solution - demo</h5>
           </div>
           
           <div class="col-sm-6 showcase">
             <a href="http://www.ottawalaptoprepair.ga"><img class="img-thumbnail thumb" src="images/ottawalpro.png" alt="1738"></a>
             <h3>Ottawa Laptop Repair</h3>
-            <h5>Complete solution</h5>
+            <h5>Complete solution - demo</h5>
           </div>
         
 
