--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container col-sm-12" id="projects">
 
         <div class="col-sm-12">
-          <h1 style="text-align: center;">Projects I've worked on</h1>
+          <h1 style="text-align: center;">Some of the projects I've worked on</h1>
         </div>
 
         <div class="resume">
